# tftp-rs

./: .gitignore  .travis.yml  Cargo.toml  README.md
bench/: README.md  bench_client.sh  create_fixtures.sh
data/: lipsum.txt
examples/client/: get.rs  get_new.rs  put.rs
examples/server/: server.rs
src/tftp/: client.rs  client_new.rs  decodedpacket.rs  lib.rs  netascii.rs  packet.rs  server.rs
