[package]
name = "tftp"
version = "0.1.0-pre"
authors = ["arjan.top@gmail.com"]

[lib]
name = "tftp"
path = "src/tftp/lib.rs"

[[example]]
name = "get"
path = "examples/client/get.rs"

[[example]]
name = "get-new"
path = "examples/client/get_new.rs"

[dependencies]
byteorder = "*"
mio = "*"
rotor = "*"
void = "*"

[dev-dependencies]
quickcheck = "*"
rand = "*"
