[package]
name = "tftp"
version = "0.1.0-pre"
authors = ["Arjan Topolovec <arjan.top@gmail.com>"]

[lib]
name = "tftp"
path = "src/tftp/lib.rs"

[[example]]
name = "get"
path = "examples/client/get.rs"

[dependencies]
byteorder = "*"
mio = "0.6"
void = "*"
quick-error = "*"

[dev-dependencies]
quickcheck = "*"
rand = "*"
