[package]
name = "tftp"
version = "0.1.0-pre"
authors = ["Arjan Topolovec <arjan.top@gmail.com>"]

[lib]
name = "tftp"
path = "src/tftp/lib.rs"

[[example]]
name = "get"
path = "examples/client/get.rs"

[[example]]
name = "server"
path = "examples/server/server.rs"

[dependencies]
byteorder = "*"
mio = "0.6"
void = "*"
quick-error = "*"
futures = "0.1"
tokio-core = "0.1"

[dev-dependencies]
quickcheck = "*"
rand = "*"
